--- a/web/CSS/estilosRegistro.css
+++ b/web/CSS/estilosRegistro.css
@@ -11,6 +11,7 @@ and open the template in the editor.
 .mainContainer{
     width: 400px;
     margin: 100px auto;
+    background-color: antiquewhite;
 }
 
 .btnRegistrarse{
