Agregue Enums Modifique la informacion del nav y topbar Ahora registrarse e ingresar están en las opción Usuario Agregue el carrito en el nav DetalleProducto mejorado con CSS

--- a/web/CSS/estilosPrincipal.css
+++ b/web/CSS/estilosPrincipal.css
@@ -159,3 +159,18 @@ select{
     font-size: 1.5rem;
 }      
 /*Banner*/
+
+/*Detalle producto*/
+
+#nombreProducto{
+    font-size: 2rem;
+}
+
+#precioProducto{
+    font-size: 1.5rem;
+    color: #BF1A2F;
+}
+.titulosProducto{
+    font-weight: bold;
+}
+/*Detalle producto*/
